css/modules/styles.css
/* ... */
#virtualclassCont.recordSeeking .whiteboardContainer .canvasWrapper {
  z-index: 0;
}

#virtualclassCont.congrea.playMode.student #virtualclassVideo.virtualclass .vjs-control-bar button.vjs-fullscreen-control {
  pointer-events: none;
}

#virtualclassCont.congrea.playMode.student #virtualclassVideo.virtualclass .vjs-control-bar button.vjs-fullscreen-control,
#virtualclassCont.congrea.playMode .vjs-play-control {
  pointer-events: none;
}

#virtualclassCont.congrea #fullScreenButton,
#virtualclassCont.congrea #fullScreenExitButton,
#virtualclassCont.congrea #bookmark {
  position: absolute;
  bottom: 0;
  right: -1px;
  color: #fff;
  z-index: 1000;
  font-size: 1.375rem;
  margin: 0;
  display: inline-block;
  text-align: center;
  vertical-align: middle;
  cursor: pointer;
}

#virtualclassCont.congrea #bookmark {
  position: absolute;
  right: 3.25rem;
}


#virtualclassCont.congrea #fullScreenButton .fullScreen,
#virtualclassCont.congrea #fullScreenExitButton [data-title="Exit Full Screen"] {
  padding: 0.6875rem 1.125rem 0.6875rem 1.125rem;
  line-height: 1.25rem;
  font-size: 1.25rem;
}



#virtualclassCont.congrea.playMode #fullScreenButton,
#virtualclassCont.congrea.playMode #fullScreenExitButton {
  right: 0;
}

#virtualclassCont.congrea #fullScreenExitButton {
  display: none;
}

#virtualclassCont.congrea #fullScreenButton span.congtooltip:hover::after,
#virtualclassCont.congrea #fullScreenExitButton span.congtooltip:hover::after {
  bottom: 47px !important;
  left: -14px;
}


#virtualclassCont.congrea.playMode #fullScreenButton span.congtooltip:hover::after,
#virtualclassCont.congrea.playMode #fullScreenExitButton span.congtooltip:hover::after {
  left: -36px;
}

#virtualclassCont.loading {
  display: none;
}

#virtualclassCont #recording.hide {
  display: none;
}

#virtualclassCont #virtualclassAppFooterPanel #recording {
  color: #fff;
  order: 1;
  z-index: 1000;
  padding: 0.71875rem 0.9375rem 0.78125rem 0.9375rem;
  cursor: pointer;
}

#virtualclassCont #virtualclassAppFooterPanel #precheckBtn {
  color: #fff;
  order: 3;
  z-index: 1000;
  padding: 0.6875rem 0.9375rem;
  cursor: pointer;
}

#virtualclassCont.congrea.playMode #virtualclassAppFooterPanel #precheckBtn {
  display: none;
}

#virtualclassCont #virtualclassAppFooterPanel #precheckBtn #settingPrecheck .prechk::before {
  content: "\ea18";
  font-weight: normal;
  font-family: 'icomoon';
  font-size: 1.0625rem;
}

#virtualclassCont #virtualclassAppFooterPanel #precheckBtn #settingPrecheck .prechk span.precheck {
  font-weight: normal;
  font-size: 0.8125rem;
  margin-left: 0.5rem;
  /* margin-top: 0.125rem; */
  float: right;
}

#virtualclassCont.congrea #virtualclassAppFooterPanel #recording.congtooltip:hover::after {
  bottom: 47px;
  left: 10px;
}

#virtualclassCont #virtualclassAppFooterPanel #recording.statusonly {
  cursor: default;
}

#virtualclassCont #virtualclassAppFooterPanel #recording.statusonly:hover {
  background-image: none;
}

#virtualclassCont[data-recording="on"] #virtualclassAppFooterPanel #recording span.showStatus,
#virtualclassCont #virtualclassApp #virtualclassAppFooterPanel #recording[data-recording="on"] span.showStatus {
  float: left;
  margin-top: 0.1875rem;
  width: 0.875rem;
  height: 0.875rem;
  font-size: 0;
  background-color: red;
  border: 0;
  border-radius: 2.1875rem;
  outline: none;
  animation-name: pulse;
  animation-duration: 1.5s;
  animation-iteration-count: infinite;
  animation-timing-function: linear;
}

#virtualclassCont[data-recording="off"] #virtualclassAppFooterPanel #recording span.showStatus,
#virtualclassCont #virtualclassApp #virtualclassAppFooterPanel #recording[data-recording="off"] span.showStatus {
  float: left;
  margin-top: 0.1875rem;
  width: 0.875rem;
  height: 0.875rem;
  font-size: 0;
  background-color: orange;
  border: 0;
  border-radius: 2.1875rem;
  outline: none;
  animation-name: pulse-off;
  animation-duration: 1.5s;
  animation-iteration-count: infinite;
  animation-timing-function: linear;
}

/* #virtualclassCont #virtualclassAppLeftPanel #recording[data-recording="off"].trimRecording span.showStatus {
	float:left;
	margin-top:1px;
	width: 16px;
    height: 16px;
    font-size: 0;
    background-color: #fff;
    border: 0;
    border-radius: 35px;
	outline: none;
	animation-name:none;
} */

#virtualclassCont #virtualclassAppFooterPanel #recording span.recordingText {
  margin-left: 0.875rem;
  line-height: 1.125rem;
  font-size: 0.9375rem;
  font-weight: 300;
}

@keyframes pulse {
  0% {
    box-shadow: 0 0 5px 0 rgba(196, 2, 2, 0.4);
  }

  65% {
    box-shadow: 0 0 5px 10px rgba(173, 0, 0, 0.4);
  }

  70% {
    box-shadow: 0 0 5px 10px rgba(173, 0, 0, 0.3);
  }

  100% {
    box-shadow: 0 0 5px 10px rgba(173, 0, 0, 0);
  }
}

@keyframes pulse-off {
  0% {
    box-shadow: 0 0 5px 0 rgba(122, 80, 1, 0.4);
  }

  65% {
    box-shadow: 0 0 5px 10px rgba(136, 88, 0, 0.4);
  }

  70% {
    box-shadow: 0 0 5px 10px rgba(136, 88, 0, 0.3);
  }

  100% {
    box-shadow: 0 0 5px 10px rgba(150, 98, 1, 0);
  }
}

@keyframes notify {
  0% {
    box-shadow: 0 0 5px 0 rgba(55, 146, 2, 0.4);
  }

  65% {
    box-shadow: 0 0 3px 5px rgba(57, 151, 2, 0.4);
  }

  70% {
    box-shadow: 0 0 3px 5px rgba(56, 150, 2, 0.3);
  }

  100% {
    box-shadow: 0 0 3px 5px rgba(55, 150, 0, 0);
  }
}


#virtualclassCont #virtualclassAppFooterPanel.recordingStatus {
  width: 35px;
  height: 35px;
  font-size: 0;
  background-color: red;
  border: 0;
  border-radius: 35px;
  margin: 18px;
  outline: none;
}

#virtualclassCont.playMode #virtualclassAppFooterPanel #recording {
  display: none;
}

#virtualclassCont #recording.statusonly {
  pointerl-events: none;
}

#virtualclassCont.playMode #recording {
  display: none;
}

/* ======== MEDIA FOR MOBILE ========== */
@media only screen and (min-device-width: 481px) and (max-device-width: 1024px) {
  #virtualclassCont.congrea #preCheckcontainer.bootstrap .modal-dialog {
    width: 870px !important;
  }
}
/* ... */

